Fixed sections bottom margin issue on small devices
- Added a media query for the last section element and assigned margin.

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -56,9 +56,14 @@ h2#sushi-heading {
     background-color: #E5D198;
 }
 
+@media (max-width: 767px) {
+    section:last-child {
+        margin-bottom: 16px;
+    }
+}
+
 /* Simple Responsive Framework. */
 .row {
-    margin-bottom: 16px;
     width: 100%;
 }
 
